@@ -59,6 +59,8 @@ Corrections:
 	The mechanism for deferring logs from signal handlers had an issue that
 	caused lots of unwanted recvfrom() calls.
 
+	Do not try to remove abstract UNIX socket entries after use.
+
 Features:
 	VSOCK, VSOCK-L support options pf, socktype, prototype (currently
 	useless)
